name: xo
version: 0.1.0

build-type: Simple
cabal-version: >=1.10

extra-source-files:
  README.md

library
  hs-source-dirs: src
  default-language: Haskell2010

  exposed-modules:
    XO.Game
    XO.Grid
    XO.Mark
    XO.Referee

  build-depends:
    base >= 4.7 && < 5

executable xo
  hs-source-dirs: cli
  default-language: Haskell2010

  main-is: Main.hs

  build-depends:
    base >= 4.7 && < 5,
    xo

test-suite xo-tests
  hs-source-dirs: tests
  default-language: Haskell2010

  type: exitcode-stdio-1.0
  main-is: Main.hs

  other-modules:
    Test.XO.Game
    Test.XO.Referee

  build-depends:
    base >= 4.7 && < 5,
    hspec,
    xo
