name: xo
version: 0.1.0

build-type: Simple
cabal-version: >=1.10

extra-source-files:
  README.md

library
  hs-source-dirs: src
  default-language: Haskell2010

  exposed-modules:
    XO.AI
    XO.Game
    XO.Grid
    XO.Mark
    XO.Referee

  build-depends:
    base >= 4.7 && < 5

executable xo
  hs-source-dirs: cli
  default-language: Haskell2010

  main-is: Main.hs

  other-modules:
    XO.CLI.Options
    XO.CLI.Orchestrator
    XO.CLI.Orchestrator.Common
    XO.CLI.Orchestrator.Interactive
    XO.CLI.Orchestrator.Noninteractive
    XO.CLI.Player

  build-depends:
    base >= 4.7 && < 5,
    optparse-applicative,
    random,
    xo

test-suite xo-tests
  hs-source-dirs: tests
  default-language: Haskell2010

  type: exitcode-stdio-1.0
  main-is: Main.hs

  other-modules:
    Test.XO.AI
    Test.XO.Game
    Test.XO.Mark
    Test.XO.Referee

  build-depends:
    base >= 4.7 && < 5,
    hspec,
    xo
