cabal-version: 2.4

name: xo
version: 0.1

author: Dwayne Crooks
license: MIT
license-file: LICENSE.txt

extra-source-files:
  README.md

library
  default-language: Haskell2010
  hs-source-dirs: src

  exposed-modules:
    XO.AI
    XO.Game
    XO.Grid
    XO.Mark
    XO.Referee

  build-depends:
    base >= 4.12 && < 5

executable xo
  default-language: Haskell2010
  hs-source-dirs: cli

  main-is: Main.hs

  other-modules:
    XO.CLI.Options
    XO.CLI.Orchestrator
    XO.CLI.Orchestrator.Interactive
    XO.CLI.Orchestrator.Noninteractive
    XO.CLI.Player

  build-depends:
    base >= 4.12 && < 5,
    optparse-applicative,
    random,
    xo

test-suite xo-tests
  default-language: Haskell2010
  hs-source-dirs: tests

  type: exitcode-stdio-1.0
  main-is: Main.hs

  other-modules:
    Test.Helper
    Test.XO.AI
    Test.XO.Game
    Test.XO.Grid
    Test.XO.Mark
    Test.XO.Referee

  build-depends:
    base >= 4.12 && < 5,
    hspec,
    xo
